[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Entities/Projectiles/Projectile.gd" type="Script" id=1]
[ext_resource path="res://scenes/Entities/Projectiles/Explosion2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.0893372, 0.729107, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.781692, 0.226216, 1, 1, 0.171247, 0.171247, 1, 0, 0, 0, 1 )

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Sprite"]
polygon = PoolVector2Array( -19, -9, 5, -10, 24, -1, 9, 11, -19, 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="defaultAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/explode = SubResource( 3 )

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 48
one_shot = true
explosiveness = 0.8
spread = 180.0
initial_velocity = 100.0
initial_velocity_random = 0.7
angle = 45.0
angle_random = 1.0
scale_amount = 5.0
color_ramp = SubResource( 4 )

[node name="ExplosionSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="animation_finished" from="defaultAnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
